--- a/item-service-dev.yml
+++ b/item-service-dev.yml
@@ -5,6 +5,16 @@ spring:
 #server:
 #  port: 8001
 
+---
+spring: 
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
+      name: item-service
+      profile: dev
+
 eureka:
   client:
     service-url:
