--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -1,14 +1,31 @@
 sp:
   user-service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]"
+    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
 
 spring:
   application:
     name: user-service
-    
+
+rabbitmq:
+    host: 192.168.174.130
+    port: 5672
+    username: admin
+    password: admin    
 server:
   port: 8101
   
+  
+---
+spring: 
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
+      name: user-service
+      profile: dev
+      
+      
 eureka:
   client:
     service-url:
@@ -18,4 +35,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh
+        include: refresh      
